sass/_mkto-forms.scss
// Targets Marketo Forms and applies Boostrap styling.
// Extends from _forms.scss


// Most elements are inside the .mktoForm element
.mktoForm {
  
  // Fix Extra padding
  padding: 0 !important;
  
  // Hide Unnecessary elements
  .mktoGutter, .mktoAsterix, .mktoOffset {
    display: none !important;
  }
  
  // Fix Radio button labels
  .mktoRadioList {
    width: 100%;
    label {
      font-weight: normal;
    }
  }
  
  .mktoFormRow {
    
    // Make Rows akin to row divs - they remove extra side margin from the children's gutter padding
    // Make Rows flexible
    margin-left: -15px;
    margin-right: -15px;
    display: flex;
    -ms-flex-direction: row;
    -webkit-box-orient: horizontal;
    flex-direction: row; 
    @media (max-width: $screen-sm-max) {
      -ms-flex-direction: column;
      -webkit-box-orient: vertical;
      flex-direction: column; 
    }
    
    // Reapply form row margin, add column gutters
    // Accommodate any number of columns 
    .mktoFormCol {
      padding: 0 15px;
      margin-bottom: 15px !important;
      min-width: 0;
      // Prevents columns from collapsing
      min-height: 60px !important;
      width: 100%;
      flex-grow: 1;
      flex-basis: 0;
    }
    
    .mktoFieldWrap {
      
      // Expand to full width
      width: 100%;
      
      // Reapply Label styles
      // Min width prevents revealed hidden labels from collapsing
      label.mktoLabel {
        width: 100% !important;
        font-size: 14px;
        margin-bottom: 5px;
        min-width: 1px;
      }
      
      // Apply Boostrap's form-control to relevant elements. High specificity used to override Marketo Styles. 
      // Min width prevents revealed hidden fields from collapsing
      // Max width prevents flex from increasing column width beyond its parent - weird bug consistently occurs without it
      select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
        @extend .form-control;
        min-width: 100%;
        max-width: 100%;
      }
    } 
  }
  
  // Button spacing
  .mktoButtonRow {
    padding: 10px 0;
    .mktoButtonWrap {
      margin-left: 0px !important;
        
      // Make button purty
      button {
        @extend .btn;
        @extend .btn-soft-magic;
        &:after {
          position: relative;
          line-height: 1;
          top: 2px;
          margin-left: 0.5em;
          font-family: 'Glyphicons Halflings';
          content: "\e131" !important; 
        }
      }
    }
  }
  
  // Margin on bottom
  form {
    width: 100% !important;
    margin-bottom: 30px;
  }
  
  // Hide unnecessary space
  .mktoPlaceholder {
    display: none;
  }
  
}

// Prevent margin on bottom if form is in a Well
.well .mktoForm form {
    margin-bottom: 0;
}

